apiproduct/httpbin/httpbin-apiproduct-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpbin-apiproduct
  namespace: httpbin
  labels:
    app: apis
spec:
  parentRefs:
    - name: gw
      namespace: ingress-gw
  hostnames:
    - "httpbin.example.com"
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /httpbin/
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      backendRefs:
      - name: httpbin
        namespace: httpbin
        port: 8000
